css: Prevent highlighting text to copy it
because it looks weird when text suddently has an ugly
blue box around it which sometiems happens on accident
when a user is clicking a lot

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Forum;
+  /* Prevent highlighting text to copy it */
+  user-select: none;
 }
 
 button,
